# simple-repository-manager

./: .drone.yml  .gitignore  .tags  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  config.yaml  template-config.yaml
src/: config.rs  constants.rs  main.rs  rest.rs  utils.rs
src/auth/: mod.rs  user_pass.rs
src/repository/: file.rs  mod.rs
