[package]
name = "simple-repository-manager"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.21"
actix-cors = "0.6.0-beta.8"
actix-files = "0.6.0-beta.16"
actix-multipart = "0.4.0-beta.13"
actix-web-httpauth = "0.6.0-beta.7"

bcrypt = "0.10"

clap = "3.0"

futures-util = "0.3"

log = "0.4"
simplelog = "0.11"

once_cell = "1.9.0"

path-clean = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"