[package]
name = "simple-repository-manager"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

bcrypt = "0.10"

blake3 = "1.3"

clap = "3.0"

futures-util = "0.3"

log = "0.4"
simplelog = "0.11"

once_cell = "1.9.0"

path-clean = "0.1"

rocket = "0.5.0-rc.1"
rocket-basicauth = "2"

rust-argon2 = "1.0"

sanitize-filename = "0.3"

serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"